[gd_scene load_steps=17 format=3 uid="uid://coe375fgbbdm1"]

[ext_resource type="PackedScene" uid="uid://b2j64sxhtbr0o" path="res://Scenes/player.tscn" id="1_1bvp3"]
[ext_resource type="Script" uid="uid://br2prn2myb2ve" path="res://Scripts/main.gd" id="1_7mycd"]
[ext_resource type="PackedScene" uid="uid://cwr1tyd1ynani" path="res://Scenes/flyingenemy.tscn" id="3_4c57u"]
[ext_resource type="PackedScene" uid="uid://b7hbqoh11ly4f" path="res://Scenes/enemy.tscn" id="3_7mycd"]
[ext_resource type="PackedScene" uid="uid://cvjh4bmixj83h" path="res://Scenes/arrow.tscn" id="4_5vw27"]
[ext_resource type="PackedScene" uid="uid://c8a744b18msj8" path="res://Scenes/hoverenemy.tscn" id="4_6iyac"]
[ext_resource type="PackedScene" uid="uid://dvyxq1po3xpsw" path="res://Scenes/shop_ui.tscn" id="5_lquwl"]
[ext_resource type="Texture2D" uid="uid://bcmvqtpfeo5uy" path="res://Assets/base.png" id="6_5vw27"]
[ext_resource type="Texture2D" uid="uid://xgef78td2eie" path="res://Assets/paperbg.jpg" id="6_272bh"]
[ext_resource type="PackedScene" uid="uid://cw5clvgs6ppgo" path="res://Scenes/mainmenu.tscn" id="8_5vw27"]
[ext_resource type="PackedScene" uid="uid://bv5ostsgpoe5i" path="res://Scenes/hud.tscn" id="9_kek77"]
[ext_resource type="AudioStream" uid="uid://10xp16rihkm7" path="res://Assets/sticktail.wav" id="11_d1ilt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlwt5"]
size = Vector2(2547, 135)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqk2v"]
size = Vector2(91, 564)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kek77"]
size = Vector2(70.5, 589)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_036b0"]
size = Vector2(2874, 59)

[node name="Main" type="Node" node_paths=PackedStringArray("shop", "hud")]
script = ExtResource("1_7mycd")
enemy_scene = ExtResource("3_7mycd")
flying_enemy_scene = ExtResource("3_4c57u")
jetpack_enemy_scene = ExtResource("4_6iyac")
player = NodePath("Player")
enemy_container = NodePath("Spawner")
flying_enemy_container = NodePath("FlyingSpawner")
jetpack_enemy_container = NodePath("JetpackSpawner")
shop = NodePath("ShopUI")
hud = NodePath("CanvasLayer/HUD")

[node name="Player" parent="." instance=ExtResource("1_1bvp3")]
position = Vector2(135, 350)
bullet_scene = ExtResource("4_5vw27")

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 742.0
offset_right = -356.0
offset_bottom = 1309.0
grow_horizontal = 2
grow_vertical = 2
rotation = -1.5708
texture = ExtResource("6_272bh")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -73.0
offset_top = 210.0
offset_right = 287.0
offset_bottom = 593.0
texture = ExtResource("6_5vw27")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("9_kek77")]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(640, 640)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(635.5, 20.5)
shape = SubResource("RectangleShape2D_tlwt5")

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(2468, 596)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wall"]
position = Vector2(59.75, -292.5)
shape = SubResource("RectangleShape2D_aqk2v")

[node name="DmgZone" type="Area2D" parent="."]
position = Vector2(193, 564)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DmgZone"]
position = Vector2(-36, -264)
shape = SubResource("RectangleShape2D_kek77")

[node name="Roof" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Roof"]
position = Vector2(1113, -19.5)
shape = SubResource("RectangleShape2D_036b0")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(1647, 517)

[node name="FlyingSpawner" type="Node2D" parent="."]
position = Vector2(1647, 124)

[node name="JetpackSpawner" type="Node2D" parent="."]
position = Vector2(1647, 284)

[node name="ShopUI" parent="." instance=ExtResource("5_lquwl")]
texture_filter = 1

[node name="Mainmenu" parent="." instance=ExtResource("8_5vw27")]
z_index = 2

[node name="WaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_d1ilt")
volume_db = -10.0

[node name="ShopMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_d1ilt")
volume_db = -10.0

[connection signal="shop_phase" from="." to="Player" method="_on_main_shop_phase"]
[connection signal="shop_phase" from="." to="ShopUI" method="_on_main_shop_phase"]
[connection signal="weapon_bought" from="Player" to="CanvasLayer/HUD" method="_on_player_weapon_bought"]
[connection signal="weapon_changed" from="Player" to="CanvasLayer/HUD" method="_on_player_weapon_changed"]
[connection signal="body_entered" from="DmgZone" to="." method="_on_dmg_zone_body_entered"]
[connection signal="money_changed" from="ShopUI" to="." method="_on_shop_ui_money_changed"]
[connection signal="shop_closed" from="ShopUI" to="." method="_on_shop_ui_shop_closed"]
[connection signal="shop_closed" from="ShopUI" to="Player" method="_on_shop_ui_shop_closed"]
[connection signal="upgrade_purchased" from="ShopUI" to="Player" method="_on_shop_ui_upgrade_purchased"]
